[package]
name = "bug_hunter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base_url = "1.1.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.0"
http = "1.3.1"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "json"] }
scraper = "0.24.0"
serde_core = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
